--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -5,7 +5,6 @@
 }
 .field_wrapper {
   justify-content: center;
-  border: 1px solid red;
   display: grid;
   grid-row-gap: 50px;
   grid-column-gap: 50px;
@@ -14,5 +13,6 @@
   }
   @media all and (min-width: 1024px) {
     grid-template-columns: repeat(5, 1fr);
+    padding: auto 50px;
   }
 }
