--- a/src/scss/components/_field.scss
+++ b/src/scss/components/_field.scss
@@ -1,32 +1,41 @@
 .field {
     text-align: center;
     width: 150px;
-    border: 1px solid blue;
+    border: 1px solid black;
 }
 .field_name {
     height: fit-content;
-    font-size: 14px;
+    margin: 10px 20px;
+    font-size: 20px;
     padding: 5px auto;
-    border: 1px solid lightcoral;
+    border: 1px solid black;
 }
 .field_content{
     display: flex;
     justify-content: space-around;
+    margin: auto 20px;
+    height: 90px;
 }
 .field_errow{
     margin: auto 0;
+    padding: 0 5px;
     width: 100%;
-    border: 1px solid hotpink;
+}
+.errow_img{
+    max-width: 100%;
+    max-height: 100%;
 }
 .field_value{
     width: 100%;
-    font-size: 20px;
+    padding-top: 25px;
+    font-size: 30px;
     font-weight: 700;
-    border: 1px solid indigo;
 }
 button {
     font-size: 20px;
     cursor: pointer;
     border-radius: 10px;
+    margin-bottom: 10px;
+    outline: none;
     background-color: lightskyblue;
 }
