--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,18 +1,19 @@
 .header {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 10px ;
     height: 50px;
     width: 100%;
-    .logo_img {
-        margin: 0 auto 0 20px;
-        height: 100%;
-    }
-    .statistics_botton {
-        margin: auto 20px auto auto;
-        font-size: 16px;
-        height: fit-content;
-        width: fit-content;
-        cursor: pointer;
-        border-radius: 10%;
-    }
+}
+.logo_img {
+    margin: 0 auto 0 20px;
+    height: 100%;
+}
+.statistics_botton {
+    margin: auto 20px auto auto;
+    font-size: 16px;
+    height: fit-content;
+    width: fit-content;
+    cursor: pointer;
+    border-radius: 10%;
 }
